--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
     width: 100%;
     max-width: 1024px;
     min-height: 100vh;
+    padding: 30px;
 }
 
 h1 {
@@ -21,19 +23,59 @@ h1 {
 }
 
 #container {
-    background-color: antiquewhite;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
+    padding: 10px;
+}
+
+.container-cel {
+    display: grid;
+    grid-template-rows: 1fr 200px;
+    place-items: center;
+    gap: 8px;
+    border: 1px solid rgb(13, 255, 0);
+    padding: 30px;
+    border-radius: 20px;
+    transition: all .1s ease-in-out;
+}
+
+.container-cel:hover {
+    box-shadow: 
+    inset 0 0 15px rgb(13, 255, 0),
+    inset 0 0 10px rgb(13, 255, 0),
+    inset 0 0 5px rgb(13, 255, 0),
+    0 0 5px rgb(13, 255, 0),
+    0 0 10px rgb(13, 255, 0),
+    0 0 15px rgb(13, 255, 0);
+    transform: scale(1.03);
+    background-color:  rgb(69, 67, 71);
+}
+
+.container-info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.container-info h3 {
+    text-align: center;
 }
 
 .img-conatiner {
-    width: 100%;
+    max-width: 80%;
     height: 200px;
-    object-fit: fill;
+    object-fit: cover;
+    background-color: red;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
 
 img {
-    width: 100%;
+
+    height: 100%;
     display: block;
 }
